filer special character